acm/policyset/gatekeeper/input/pod-deny-missing-netsegment/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pod-must-have-netsegment
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups:
        - apps
        kinds:
        - DaemonSet
        - Deployment
        - StatefulSet
    namespaceSelector:
      matchLabels:
        container-platform-managed: "true"
  parameters:
    message: "All Pods must have a valid 'netsegment' label"
    labels:
      - key: netsegment
        allowedRegex: "^(frontend|backend|infra)$"
